Adds google analytics 4

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,17 @@
     {% include head-custom.html %}
     <link rel="stylesheet" href="/assets/css/custom.css">
 
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TG5Z6P15ZV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-TG5Z6P15ZV');
+  </script>
+
+
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
